--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>Mapbox Storytelling</title>
+    <title>Visualising Selfie Incidents in Australia</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mapbox/assembly/publisher-staging/src/svgs/mapbox.svg">
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js'></script>
@@ -13,16 +13,17 @@
         body {
             margin:0;
             padding:0;
-            font-family: sans-serif;
+            font-family: "Inter", sans-serif;
         }
         a, a:hover, a:visited {
-            color: #0071bc;
+            color: #ff2424;
         }
         #map {
             top:0;
             height: 100vh;
             width:100vw;
             position: fixed;
+            z-index: -5;
         }
         #mapInset {
             bottom:50px;
@@ -95,7 +96,7 @@
         }
         .dark {
             color: #fafafa;
-            background-color: #444;
+            background-color: black;
         }
         .step {
             padding-bottom: 50vh;
