--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,6 @@
         }
         .step {
             padding-bottom: 50vh;
-            /* margin-bottom: 10vh; */
             opacity: 0.25;
         }
         .step.active {
@@ -130,7 +129,7 @@
             touch-action: unset;
         }
 
-        </style>
+    </style>
 </head>
 <body>
 
@@ -174,6 +173,20 @@ function setLayerOpacity(layer) {
         }
         map.setPaintProperty(layer.layer, prop, layer.opacity, options);
     });
+}
+
+function playVideo(videoId) {
+    var video = document.getElementById(videoId);
+    if (video) {
+        video.play();
+    }
+}
+
+function pauseVideo(videoId) {
+    var video = document.getElementById(videoId);
+    if (video) {
+        video.pause();
+    }
 }
 
 var story = document.getElementById('story');
@@ -391,6 +404,9 @@ map.on("load", function() {
         if (chapter.onChapterExit.length > 0) {
             chapter.onChapterExit.forEach(setLayerOpacity);
         }
+        if (chapter.callback) {
+            window[chapter.callback]();
+        }
     });
 
 
@@ -401,51 +417,51 @@ map.on("load", function() {
 
 //Helper functions for insetmap
 function getInsetBounds() {
-            let bounds = map.getBounds();
+    let bounds = map.getBounds();
 
-            let boundsJson = {
-                "type": "FeatureCollection",
-                "features": [{
-                    "type": "Feature",
-                    "properties": {},
-                    "geometry": {
-                        "type": "Polygon",
-                        "coordinates": [
-                            [
-                                [
-                                    bounds._sw.lng,
-                                    bounds._sw.lat
-                                ],
-                                [
-                                    bounds._ne.lng,
-                                    bounds._sw.lat
-                                ],
-                                [
-                                    bounds._ne.lng,
-                                    bounds._ne.lat
-                                ],
-                                [
-                                    bounds._sw.lng,
-                                    bounds._ne.lat
-                                ],
-                                [
-                                    bounds._sw.lng,
-                                    bounds._sw.lat
-                                ]
-                            ]
+    let boundsJson = {
+        "type": "FeatureCollection",
+        "features": [{
+            "type": "Feature",
+            "properties": {},
+            "geometry": {
+                "type": "Polygon",
+                "coordinates": [
+                    [
+                        [
+                            bounds._sw.lng,
+                            bounds._sw.lat
+                        ],
+                        [
+                            bounds._ne.lng,
+                            bounds._sw.lat
+                        ],
+                        [
+                            bounds._ne.lng,
+                            bounds._ne.lat
+                        ],
+                        [
+                            bounds._sw.lng,
+                            bounds._ne.lat
+                        ],
+                        [
+                            bounds._sw.lng,
+                            bounds._sw.lat
                         ]
-                    }
-                }]
+                    ]
+                ]
             }
+        }]
+    }
 
-            if (initLoad) {
-                addInsetLayer(boundsJson);
-                initLoad = false;
-            } else {
-                updateInsetLayer(boundsJson);
-            }
+    if (initLoad) {
+        addInsetLayer(boundsJson);
+        initLoad = false;
+    } else {
+        updateInsetLayer(boundsJson);
+    }
 
-        }
+}
 
 function addInsetLayer(bounds) {
     insetMap.addSource('boundsSource', {
@@ -480,12 +496,11 @@ function updateInsetLayer(bounds) {
     insetMap.getSource('boundsSource').setData(bounds);
 }
 
-
-
 // setup resize event
 window.addEventListener('resize', scroller.resize);
 
 </script>
+<script async defer src="//www.instagram.com/embed.js"></script>
 
 </body>
 </html>
